0029492: Coding Rules. NCollection_IndexedDataMap - add missing documentation to method ::Add()